# fast_api_currency_converter

./: .dockerignore  .env.example  .flake8  .gitignore  .pylintrc  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: run-tests.yml
docker/backend/: entrypoint-web.sh
docker/dockerfiles/: Dockerfile.local
src/alembic/: env.py
src/alembic/versions/: 2024_02_21_1240-1e92c5f09564_create_currency_table.py  2024_02_21_2013-2166600e619b_create_currency_tables.py
src/app/: main.py
src/app/api/v1/: __init__.py  api.py  routes.py
src/app/api/v1/currency/: crud.py  schemas.py  views.py
src/app/api/v1/currency/services/: currency_helper.py  external_api.py
src/app/config/: __init__.py  settings.py
src/app/currency/: crud.py  schemas.py  views.py
src/app/currency/services/: currency_helper.py
src/app/models/: __init__.py  base.py  currency.py  db_helper.py
src/tests/: conftest.py  test_exchange_currency.py  test_last_update_dates.py  test_status.py  test_update_exchange_rates.py  test_views.py
