[tool.poetry]
name = "fast-api-currency-converter"
version = "0.1.0"
description = "API for currency conversion"
authors = ["IvanGorbunov <falseprogrammerfirst@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
freecurrencyapi = "^0.1.0"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
httpx = "^0.26.0"
mypy = "^1.8.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
